# StockStream

./: CHANGELOG.md  README.md  docker-compose.yaml  grafana_dashboard.json  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
consumer/: InfluxDBWriter.py  alert_rules.py  consumer.py
docs/: README.md  index.html  script.js  styles.css
logs/: __init__.py  logger.py
producer/: Dockerfile  producer_utils.py
script/: initdb.sql
