[project]
name = "stockstream"
version = "1.0.0"
description = "Distributed real-time analytics platform for streaming stock market data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "StockStream Team" }]
keywords = ["kafka", "spark", "streaming", "stock", "analytics", "influxdb", "grafana"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "confluent-kafka>=2.3.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "findspark>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "influxdb-client>=1.36.0,<2.0.0",
    "yfinance>=0.2.0",
    "schedule>=1.2.0",
    "pytz>=2023.0",
]

[project.urls]
Homepage = "https://github.com/puneethkotha/StockStream"
Documentation = "https://puneethkotha.github.io/StockStream"
Repository = "https://github.com/puneethkotha/StockStream"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.ruff.isort]
known-first-party = ["consumer", "producer", "script", "logs"]
